fix overflow react select when there are too much selections

--- a/src/components/inputs/inputs.scss
+++ b/src/components/inputs/inputs.scss
@@ -136,3 +136,19 @@
 		}
 	}
 }
+
+// CSS REACT SELECT
+.react-select__control {
+	height: 38px;
+	overflow: hidden;
+
+	.react-select__indicators {
+		height: 100%;
+	}
+
+	.react-select__value-container {
+		height: 100%;
+		overflow-y: auto;
+	}
+}
+// END CSS REACT SELECT
